# debug-show

./: .ghci  ChangeLog.md  LICENSE  debug-show.cabal
Lib/Debug/: Show.hs
Lib/Debug/Show/: StringExpressionManipulation.hs  TypeManipulation.hs
Tests/Example/: Main.hs  Structures.hs
